logo de creative commons puesto

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,8 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to image_tag("logoCHIVO-h260.png", width: '180px'), "http://chivo.cl", class: 'navbar-brand' %>
-      
+     
+ 
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-responsive-collapse">
@@ -123,12 +124,17 @@
 <div class="copyright">
   <div class="container">
   <div class="row">
-    <div class="col-md-6">      
-        <p class="copyright-space">
-          2013 -2015 &copy; ChiVO v0.1.1. ALL Rights Reserved. 
+    <div class="col-md-20">
+	<ul class="list-inline">      
+       <li> <p class="copyright-space">
+          2013 -2015 &copy; ChiVO v0.1.1. ALL Rights Reserved.
           <!-- <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> -->
-        </p>
-    </div>
+	</p></li>
+		<ul class="pull-right breadcrumb">
+		 	<li><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+       			</li>
+		</ul>
+    </ul>
     <div class="col-md-6">  
     <a href="index.html">
       <%#= image_tag "logo1-default.png", class: 'pull-right', width: '110px' %>
